# config_setup_pipeline

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml  requirements.txt
.claude/: settings.json
.claude/commands/: multi-review.md  review.md
src/: __init__.py  cli.py  main.py  models.py
src/advisor/: __init__.py  critical_advisor.py
src/analyzer/: __init__.py  config_analyzer.py
src/generator/: __init__.py  config_generator.py
src/pipeline/: __init__.py  base.py  stages.py
src/questions/: __init__.py  engine.py
src/research/: __init__.py  researcher.py
src/review/: __init__.py  reviewer.py
src/setup/: __init__.py  api_keys.py  wizard.py
src/validator/: __init__.py  config_validator.py
